tests/NormalTests/paczka1/fuzzy1/93808273.err
Error in line 1: SoZ0 A116 90,6
Error in line 5: eQgEVK S995 99,1
Error in line 9: 2Lhqp5Mb A116 29,5
Error in line 11: eQgEVK S995 9,8
Error in line 36: qg6 A116 10,7
